# pybase

./: .gitignore  README.md  cookiecutter.json  pytest.ini  requirements.txt
hooks/: post_gen_project.sh
tests/: __init__.py  conftest.py
tests/workflows/: test_bad_licenses.py  test_bump_version.py  test_generation.py  test_vulnerabilities.py
{{cookiecutter.__project_slug}}/: .editorconfig  .gitignore  .license-whitelist  .rubocop.yml  LICENSE  Rakefile  alembic.ini  pyproject.toml  setup.py  tox.ini
{{cookiecutter.__project_slug}}/alembic/: env.py
{{cookiecutter.__project_slug}}/scripts/: bootstrap.sh  gen_requirements.sh  run_audit.sh  run_license_check.sh  update_requirements.sh
{{cookiecutter.__project_slug}}/src/{{cookiecutter.__project_slug}}/: models.py
{{cookiecutter.project_slug}}/: .editorconfig  .flake8  alembic.ini  pyproject.toml  setup.py  tox.ini
{{cookiecutter.project_slug}}/alembic/: env.py
{{cookiecutter.project_slug}}/scripts/: gen_requirements.sh  run_audit.sh  run_license_check.sh
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: models.py
